localstorage to persist todos

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,7 +6,8 @@
   "form": {
     "title": "Title",
     "text": "Text (optional)",
-    "submit": "Add"
+    "submit": "Add",
+    "clear": "Clear"
   },
 
   "todolist": {
