--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -6,7 +6,8 @@
   "form": {
     "title": "Titre",
     "text": "Texte (optionnel)",
-    "submit": "Ajouter"
+    "submit": "Ajouter",
+    "clear": "Vider"
   },
 
   "todolist": {
