reorganized component structure + reworked design

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,9 +5,7 @@
 
   "form": {
     "title": "Title",
-    "text": "Text (optional)",
-    "submit": "Add",
-    "clear": "Clear"
+    "text": "Text (optional)"
   },
 
   "todolist": {
